<color=green><b>2018-04-06</b></color>
- Storage components are now set to inherit by default
- Removed seed drop from plants that you can craft seeds for
- Changes to Steel Table Lamp, Steel Floor Lamp and Steel Ceiling Light recipes
- Changes to Farming Skill Book recipe
- Changed icon for Coin
- Reduced construction skill costs
- Reduced crafting time for fillets
- Reduced amounts of items you get from plants
- Reduced crafting time for seeds
- Added more seed recipes
- Added recipe Hewn logs to Lumber
- Added recipe Mortared Stone to Brick
- Added more books to some of the more advanced techs
- Added fuel value to Wood Pulp
- Added Wood Pulp as fuel in a number of stations
- Added /modkit
- Added /unclaimselect and /unclaimconfirm for admins

<color=green><b>2018-04-03</b></color>
- Removed Super Secret Dildo Statue (April Fools)
- Hid Ecko Statue (Temp fix)
- Added weight to world objects
- Halved the weight of coal and ores
- Added /houseranking
- Added /report
- Added Super Skills

<color=green><b>2018-04-01</b></color>
- Removed Tailings from Steel recipe
- Removed Toxic Waste Barrel
- Removed Glue from Shelf Cabinet
- Removed Glue from Bookshelf
- Reduced amounts of books in Shelf Cabinet and Bookshelf
- Reduced Nails needed in Shelf Cabinet and Bookshelf
- Organized mod folder
- Added Super Secret Dildo Statue
- Added Changelog
- Added Rules

<color=green><b>2018-03-31</b></color>
- Removed iron ingot from Road Tool
- Removed iron ingot from Door and reduced hinge and nails
- Removed Rope from stockpile and increased logs needed
- Increased storage space in Cardboard Boxes