@@ -1,3 +1,8 @@
+<color=green><b>2018-04-08</b></color>
+- Removed Campfire Bison, Elk and Wolf recipes
+- Stations using fuel is now inherited by default
+- Moved charcoal production from Smith to Carpenter skill tree
+
 <color=green><b>2018-04-06</b></color>
 - Storage components are now set to inherit by default
 - Removed seed drop from plants that you can craft seeds for
